Fixed uneven padding of main-text

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,9 +47,10 @@ header{
         }
     /*Header main text*/
     .main-text{
+        box-sizing: border-box;
         display: flex;
         flex-direction: row;
-        padding: 150px 0px;
+        padding: 100px 0px;
     }
         .main-text > div{
             width: 100%;
@@ -76,9 +77,9 @@ header{
                 font-size: 20px;
             }
         .image > img{
-        width: 100%;
-        height: 270px;
-        margin-left: 15px;
+            max-width:100%;
+            height: auto;
+            
         }
 /*First secton*/
 .first-sect{
